--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/payments-policies/template/wizard-basic-info-payments-policies.html
@@ -1,22 +1,22 @@
 <div class="row card-header">
-	<div class="col-sm-10">
+	<div class="col-xs-4 col-md-4">
 		<h1>{{ 'Basic Information' | translate }} <small>{{ 'payments & policies' | translate }}</small></h1>
 	</div>
 
-	<div class="col-sm-2">
-		<div class="col-xs-2 form-group pull-right top_search text-right">
+	<div class="col-xs-6 col-md-6 description">
+		<small>{{ '[Wizard Step 0] Payments & Policies text' | translate }}</small>
+	</div>
+
+	<div class="col-xs-2 col-md-2 text-right">
 			<h3 class="">2/3</h3>
-		</div>
 	</div>
 </div>
-<div class="row page-info">
-	<div class="col-md-8">
-		<p>{{ '[Wizard Step 0] Payments & Policies text' | translate }}</p>
-	</div>
-</div>
-<div class="row card-body">
-	<div class="col-sm-12">
+
+<div class="row card-body page-info">
+	<div class="col-xs-9 col-md-9">
 		<basic-info-payments-policies-edit></basic-info-payments-policies-edit>
+	</div>
+	<div class="col-xs-3 col-md-3 overview-right">
 		<wizard-steps-component></wizard-steps-component>
 	</div>
 </div>
