--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -112,23 +112,32 @@ header {
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
 }
 
-.nav.side-menu>li>a,.nav.child_menu>li>a {
+.nav.side-menu>li>a{
     border-bottom: 1px solid #fff;
     padding: 13px 15px;
     margin: 0;
 }
 
-.nav.side-menu>li>a:hover,.nav.child_menu>li>a:hover,.nav.side-menu>li>a:active,.nav.child_menu>li>a:active {
+.nav.side-menu>li>a:hover,
+.nav.side-menu>li>a:active{
     background-color: rgba(255,255,255,0.75);
-    color: #0b2139 !important;
+    color: #0b2139;
     cursor: pointer;
+}
+
+.nav.side-menu>li.disabled-page>a:hover{
+    background-color: transparent;
+    color: #b1becd;
+    cursor: default;
 }
 
 .nav.navbar-nav>li>a.user-profile {
     color: #fff;
 }
 
-.nav .open>a.user-profile,.nav .open>a.user-profile:focus,.nav .open>a.user-profile:hover {
+.nav .open>a.user-profile,
+.nav .open>a.user-profile:focus,
+.nav .open>a.user-profile:hover {
     color: #0b2139 !important;
     width: 62px;
 }
@@ -143,7 +152,10 @@ header {
     font-size: 24px;
 }
 
-.card-header h1,.card-header h2,.card-header h3,.card-header h1 small {
+.card-header h1,
+.card-header h2,
+.card-header h3,
+.card-header h1 small {
     color: #fc8333;
 }
 
@@ -409,7 +421,9 @@ table .buttons,table button,table .btn {
     background: #ccc;
 }
 
-.button-cancel,.button-save,.button-copy {
+.button-cancel,
+.button-save,
+.button-copy {
     min-width: 128px;
     padding: 12px 16px;
 }
@@ -460,9 +474,14 @@ input[type="number"].form-control {
     overflow-y: hidden;
 }
 
-.nav.side-menu> li.current-page, .nav.side-menu> li.active {
-    border-right: 6px solid #fc8433 !important;
+.nav.side-menu> li.current-page,
+.nav.side-menu> li.active {
+    border-right: 6px solid #fc8433;
     background: #fff;
+}
+
+.nav>li.disabled-page>a {
+    color:#b1becd;
 }
 
 .card-body{
@@ -484,12 +503,20 @@ input[type="number"].form-control {
 }
 
 /* Bootstrap overrides */
-.btn-primary,.btn-primary:hover,.btn-primary:active,.btn-primary:visited,.btn-primary:focus {
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
     background-color: #6098D1 !important;
     border-color: #6098D1 !important;
 }
 
-.btn-danger,.btn-danger:hover,.btn-danger:active,.btn-danger:visited,.btn-danger:focus {
+.btn-danger,
+.btn-danger:hover,
+.btn-danger:active,
+.btn-danger:visited,
+.btn-danger:focus {
     background-color: #F89D28 !important;
     border-color: #F89D28 !important;
 }
