--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -1,25 +1,19 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div class="row" *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
+<div *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-md-6 form-group">
             <label>{{ 'Name' | translate }}</label>
-        </div>
-        <div class="col-md-6">
             <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
                 <input type="text" class="form-control" ngControl="name">
             </div>
             <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the bed' | translate }}</small></label>
         </div>
-        <div class="col-md-4">
-        </div>
     </div>
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Icon' | translate }}</label>
-        </div>
-        <div class="col-md-10">
             <div class="row" data-toggle="buttons">
                 <div class="col-md-3 button-items" *ngFor="#bedTemplate of bedTemplateList">
                     <label class="btn btn-default btn-group" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
@@ -31,20 +25,17 @@
     </div>
     <hr/>
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-md-6">
             <label>{{ 'Capacity' | translate }}</label>
-        </div>
-        <div class="col-md-6">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-xs-6 col-md-6">
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxAdults')}">
                         <span class="input-group-addon"><span class="unitpal-font">:</span></span>
                         <input type="number" class="form-control" placeholder="{{ 'Adults' | translate }}" ngControl="maxAdults">
                     </div>
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of adults' | translate }}</small></label>
                 </div>
-
-                <div class="col-md-6">
+                <div class="col-xs-6 col-md-6">
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxChildren')}">
                         <span class="input-group-addon"><span class="unitpal-font">;</span></span>
                         <input type="number" class="form-control" placeholder="{{ 'Children' | translate }}" ngControl="maxChildren">
@@ -52,19 +43,10 @@
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert a valid max number of children' | translate }}</small></label>
                 </div>
             </div>
-
             <label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Each adult is replaceable with a child. Max Adults: 2 Max Children: 1 OR Max Adults: 1 Max Children: 2 OR Max Children: 3' | translate }}</small></label>
         </div>
-
-        <div class="col-md-4">
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-md-6">
             <label>{{ 'Dimensions' | translate }}</label>
-        </div>
-        <div class="col-md-6">
             <div class="row">
                 <div class="col-xs-6">
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('width')}">
@@ -85,41 +67,25 @@
 
             <label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Dimensions are expressed in cm' | translate }}</small></label>
         </div>
-
-        <div class="col-md-4">
-        </div>
     </div>
 
     <hr/>
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-xs-12 col-md-6">
             <label>{{ 'Notes' | translate }}</label>
-        </div>
-        <div class="col-md-6">
             <textarea class="form-control" ngControl="notes"></textarea>
-        </div>
-        <div class="col-md-4">
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-8">
-        </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-md-offset-8 col-md-4">
             <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewBed()" (click)="saveBed()">
                 <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
             <button type="button" class="btn btn-primary btn-block" *ngIf="isNewBed()" (click)="saveBed()">
                 <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Add Bed' | translate }}
             </button>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8">
-        </div>
-        <div class="col-md-4">
             <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
         </div>
     </div>
