--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -1,6 +1,6 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div *ngIf="!isLoading">
-    <div class="col-md-5">
+<div class="row" *ngIf="!isLoading">
+    <div class="col-xs-12 col-md-5">
         <label class="control-label">
             <h2>{{ 'Select the timezone' | translate }}</h2><small>{{ 'This will be used for automatic processes that need to know your local hour' | translate }}</small>
         </label>
@@ -17,7 +17,7 @@
 
         <hr>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6">
                 <label>{{ 'Check in from' | translate }}</label>
                 <th-hour-select 
 					[initialHour]="hotel.operationHours.checkInFrom" 
@@ -27,7 +27,7 @@
 				</th-hour-select>
             </div>
 
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6">
                 <label>{{ 'Check in to (optional)' | translate }}</label>
                 <th-hour-select 
 					[initialHour]="hotel.operationHours.checkInToOptional" 
@@ -39,7 +39,7 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6">
                 <label>{{ 'Check out from (optional)' | translate }}</label>
                 <th-hour-select
 					[initialHour]="hotel.operationHours.checkOutFromOptional" 
@@ -49,7 +49,7 @@
 				</th-hour-select>
             </div>
 
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6">
                 <label>{{ 'Check out to' | translate }}</label>
                 <th-hour-select
 					[initialHour]="hotel.operationHours.checkOutTo" 
@@ -61,7 +61,7 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-6 col-md-6">
                 <label>{{ 'Booking Cancellation Hour' | translate }}</label>
                 <th-hour-select 
 					[initialHour]="hotel.operationHours.cancellationHour" 
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="col-md-6 col-md-offset-1">
+    <div class="col-xs-12 col-md-6 col-md-offset-1">
 
         <label class="control-label">
             <h2>{{ 'Hotel Amenities' | translate }}</h2></label>
