--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -1,9 +1,9 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<div class="row" *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
+<div *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-8">
             <div class="row">
-                <div class="col-md-6 col-xs-12 form-group">
+                <div class="col-xs-12 col-md-6 form-group">
                     <label>{{ 'Name' | translate }}</label>
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
                         <input type="text" class="form-control" ngControl="name">
@@ -11,7 +11,7 @@
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the room' | translate }}</small></label>
                 </div>
 
-                <div class="col-md-6 col-xs-12 ">
+                <div class="col-xs-12 col-md-6">
                     <label>{{ 'Floor Number' | translate }}</label>
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('floor')}">
                         <span class="input-group-addon"><i class="fa fa-caret-square-o-up"></i></span>
@@ -22,7 +22,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12 col-md-12">
                     <label>{{ 'Category' | translate }}</label>
                     <table class="table table-striped form-group">
                         <tbody class="input-group" [ngClass]="{'form-warning': didSubmitForm&&roomCategoryNotSelected}">
@@ -40,15 +40,13 @@
             </div>
 
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-xs-12 col-md-12">
                     <label class="control-label">{{ 'Beds' | translate }}</label>
-                </div>
-                <div class="col-md-4">
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12 col-md-12">
                     <div class="bed-container">
                         <div *ngFor="#bedVM of roomVM.bedList; #bedIndex = index" class="bed-slot">
                             <a class="btn btn-xs bed-remove-btn" (click)="removeBed(bedIndex)">
@@ -74,7 +72,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-xs-12 col-md-4">
             <label>{{ 'Image of the Room' | translate }}</label>
             <image-upload [imageUrl]="roomVM.imageUrl" (onImageUpload)="didUploadImage($event)"></image-upload>
         </div>
@@ -84,15 +82,13 @@
     <hr/>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Amenities' | translate }}</label>
-        </div>
-        <div class="col-md-4">
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-md-12">
             <div class="form-group btn-group amenities-group" role="group">
                 <div class="button-check th-grid-btn" *ngFor="#roomAmenityVM of roomAmenities.roomAmenityList">
                     <div class="info-block block-info clearfix" title="{{ roomAmenityVM.roomAmenity.name }}">
@@ -108,15 +104,13 @@
     </div>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Attributes' | translate }}</label>
-        </div>
-        <div class="col-md-4">
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-md-12">
             <div class="form-group btn-group amenities-group" role="group">
                 <div class="button-check th-grid-btn" *ngFor="#roomAttributeVM of roomAttributes.roomAttributeList">
                     <div class="info-block block-info clearfix" title="{{ roomAttributeVM.roomAttribute.name }}">
@@ -132,36 +126,25 @@
     </div>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-8">
             <label>{{ 'Notes' | translate }}</label>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-12 col-md-8">
             <textarea class="form-control" ngControl="notes"></textarea>
-        </div>
-        <div class="col-md-4">
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-8">
-        </div>
-        <div class="col-md-4">
+        <div class="col-xs-12 col-md-offset-8 col-md-4">
             <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewRoom()" (click)="saveRoom()">
                 <i *ngIf="isSavingRoom" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
             <button type="button" class="btn btn-primary btn-block" *ngIf="isNewRoom()" (click)="saveRoom()">
                 <i *ngIf="isSavingRoom" class="fa fa-spinner fa-pulse"></i> {{ 'Add Room' | translate }}
             </button>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-8">
-        </div>
-        <div class="col-md-4">
             <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
         </div>
     </div>
