--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -1,7 +1,7 @@
 <loading-component [isLoading]="isLoading"></loading-component>
-<form class="form-horizontal form-label-left" *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
+<form *ngIf="!isLoading" [ngFormModel]="getDefaultControlGroup()">
 	<div class="row">
-		<div class="col-xs-6 col-md-6">
+		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-12 form-group" >
 					<label>{{ 'Hotel Name' | translate }}</label>
@@ -31,21 +31,24 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-xs-12 col-md-6 form-group">
+				<div class="col-xs-12 col-md-12 form-group">
 					<label>{{ 'Address' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('streetAddress')}">
 						<input type="text" class="form-control" ngControl="streetAddress">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the address' | translate }}</small></label>
 				</div>
-				<div class="col-xs-6 col-md-3 form-group">
+			</div>
+			
+			<div class="row">
+				<div class="col-xs-6 col-md-6 form-group">
 					<label>{{ 'City' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('city')}">
 						<input type="text" class="form-control" ngControl="city">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the city' | translate }}</small></label>
 				</div>
-				<div class="col-xs-6 col-md-3 form-group">
+				<div class="col-xs-6 col-md-6 form-group">
 					<label>{{ 'Postal Code' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('postalCode')}">
 						<input type="text" class="form-control" ngControl="postalCode">
@@ -53,7 +56,7 @@
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the postal code' | translate }}</small></label>
 				</div>
 			</div>
-
+			
 			<hr class="separator">
 
 			<div class="row">
@@ -134,8 +137,6 @@
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid url' | translate }}</small></label>
 			</div>
-		</div>
-		<div class="col-xs-3 col-md-3 form-group">
 		</div>
 	</div>
 </form>
