--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -33,7 +33,7 @@
 
 	</div>
 
-	<div class="col-xs-12 col-md-4 col-md-offset-1">
+	<div class="col-xs-12 col-md-offset-1 col-md-4">
 		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="vatTaxType"></basic-info-tax-list>
 	</div>
 
