--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -15,9 +15,9 @@
         <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Icon' | translate }}</label>
             <div class="row" data-toggle="buttons">
-                <div class="col-md-3 button-items" *ngFor="#bedTemplate of bedTemplateList">
-                    <label class="btn btn-default btn-group" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
-                        <span class="unitpal-font bed-btn">{{bedTemplate.iconUrl}}</span>
+                <div class="col-md-2 button-items" *ngFor="#bedTemplate of bedTemplateList">
+                    <label class="btn btn-default btn-group bed-btn" [ngClass]="{ active: bedTemplate.id == bedVM.bed.bedTemplateId }" (click)="bedVM.bed.bedTemplateId=bedTemplate.id">
+                        <span class="unitpal-font">{{bedTemplate.iconUrl}}</span>
                     </label>
                 </div>
             </div>
@@ -77,15 +77,17 @@
             <textarea class="form-control" ngControl="notes"></textarea>
         </div>
     </div>
-
+    
     <div class="row">
-        <div class="col-xs-12 col-md-offset-8 col-md-4">
+        <div class="col-xs-12 col-md-offset-6 col-md-3">
             <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewBed()" (click)="saveBed()">
                 <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
             <button type="button" class="btn btn-primary btn-block" *ngIf="isNewBed()" (click)="saveBed()">
                 <i *ngIf="isSavingBed" class="fa fa-spinner fa-pulse"></i> {{ 'Add Bed' | translate }}
             </button>
+        </div>
+        <div class="col-xs-12 col-md-3">
             <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
         </div>
     </div>
