--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -73,14 +73,16 @@
 			<textarea class="form-control" [(ngModel)]="customerVM.customer.notes"></textarea>
 		</div>
 	</div>
-
+	
 	<div class="row">
-		<div class="col-md-offset-8 col-md-4 col-xs-offset-8 col-xs-4">
+        <div class="col-xs-12 col-md-offset-6 col-md-3">
 			<button type="button" class="btn btn-primary btn-block" (click)="saveCustomer()">
 					<i *ngIf="isSavingCustomer" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
 				</button>
-			<button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
-		</div>
-	</div>
-
+        </div>
+        <div class="col-xs-12 col-md-3">
+            <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
+        </div>
+    </div>
+	
 </div>
