--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -11,7 +11,7 @@
                     <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the room' | translate }}</small></label>
                 </div>
 
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-6 form-group">
                     <label>{{ 'Floor Number' | translate }}</label>
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('floor')}">
                         <span class="input-group-addon"><i class="fa fa-caret-square-o-up"></i></span>
@@ -39,13 +39,10 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row form-group">
                 <div class="col-xs-12 col-md-12">
                     <label class="control-label">{{ 'Beds' | translate }}</label>
                 </div>
-            </div>
-
-            <div class="row">
                 <div class="col-xs-12 col-md-12">
                     <div class="bed-container">
                         <div *ngFor="#bedVM of roomVM.bedList; #bedIndex = index" class="bed-slot">
@@ -81,15 +78,12 @@
 
     <hr/>
 
-    <div class="row">
+    <div class="row form-group">
         <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Amenities' | translate }}</label>
         </div>
-    </div>
-
-    <div class="row">
         <div class="col-xs-12 col-md-12">
-            <div class="form-group btn-group amenities-group" role="group">
+            <div class="btn-group amenities-group" role="group">
                 <div class="button-check th-grid-btn" *ngFor="#roomAmenityVM of roomAmenities.roomAmenityList">
                     <div class="info-block block-info clearfix" title="{{ roomAmenityVM.roomAmenity.name }}">
                         <div data-toggle="buttons">
@@ -103,15 +97,12 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row form-group">
         <div class="col-xs-12 col-md-12">
             <label class="control-label">{{ 'Attributes' | translate }}</label>
         </div>
-    </div>
-
-    <div class="row">
         <div class="col-xs-12 col-md-12">
-            <div class="form-group btn-group amenities-group" role="group">
+            <div class="btn-group amenities-group" role="group">
                 <div class="button-check th-grid-btn" *ngFor="#roomAttributeVM of roomAttributes.roomAttributeList">
                     <div class="info-block block-info clearfix" title="{{ roomAttributeVM.roomAttribute.name }}">
                         <div data-toggle="buttons">
@@ -125,27 +116,27 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row form-group">
         <div class="col-xs-12 col-md-8">
             <label>{{ 'Notes' | translate }}</label>
         </div>
-    </div>
-
-    <div class="row">
         <div class="col-xs-12 col-md-8">
             <textarea class="form-control" ngControl="notes"></textarea>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-12 col-md-offset-8 col-md-4">
+        <div class="col-xs-12 col-md-offset-6 col-md-3">
             <button type="button" class="btn btn-primary btn-block" *ngIf="!isNewRoom()" (click)="saveRoom()">
                 <i *ngIf="isSavingRoom" class="fa fa-spinner fa-pulse"></i> {{ 'Save Changes' | translate }}
             </button>
             <button type="button" class="btn btn-primary btn-block" *ngIf="isNewRoom()" (click)="saveRoom()">
                 <i *ngIf="isSavingRoom" class="fa fa-spinner fa-pulse"></i> {{ 'Add Room' | translate }}
             </button>
+        </div>
+        <div class="col-xs-12 col-md-3">
             <button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
         </div>
     </div>
+    
 </div>
