--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/property-details/template/wizard-basic-info-property-details.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="row card-body page-info">
-	<div class="col-xs-9 col-md-9">
+	<div class="col-xs-9 col-md-9 basic-info-container">
 		<basic-info-property-details-edit></basic-info-property-details-edit>
 	</div>
 	<div class="col-xs-3 col-md-3 overview-right">
