--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
@@ -1,4 +1,4 @@
-<label>{{ 'Room Categories' | translate }}</label>
+<label>{{ 'Room Categories' | translate }}*</label>
 <table class="table table-striped form-group">
 	<tbody class="input-group" [ngClass]="{'form-warning': didSubmit&&!isValid()}">
 		<tr *ngFor="#roomCategory of roomCategoryList">
