--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -4,7 +4,7 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="row">
 				<div class="col-xs-12 col-md-12 form-group" >
-					<label>{{ 'Hotel Name' | translate }}</label>
+					<label>{{ 'Hotel Name' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
 						<input type="text" class="form-control" ngControl="name"/>
 					</div>
@@ -22,7 +22,7 @@
 			
 			<div class="row">
 				<div class="col-xs-12 col-md-12 form-group">
-					<label>{{ 'Company Name' | translate }}</label>
+					<label>{{ 'Company Name' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('companyName')}">
 						<input type="text" class="form-control" ngControl="companyName"/>
 					</div>
@@ -32,7 +32,7 @@
 			
 			<div class="row">
 				<div class="col-xs-12 col-md-12 form-group">
-					<label>{{ 'Address' | translate }}</label>
+					<label>{{ 'Address' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('streetAddress')}">
 						<input type="text" class="form-control" ngControl="streetAddress">
 					</div>
@@ -42,14 +42,14 @@
 			
 			<div class="row">
 				<div class="col-xs-6 col-md-6 form-group">
-					<label>{{ 'City' | translate }}</label>
+					<label>{{ 'City' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('city')}">
 						<input type="text" class="form-control" ngControl="city">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the city' | translate }}</small></label>
 				</div>
 				<div class="col-xs-6 col-md-6 form-group">
-					<label>{{ 'Postal Code' | translate }}</label>
+					<label>{{ 'Postal Code' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('postalCode')}">
 						<input type="text" class="form-control" ngControl="postalCode">
 					</div>
@@ -61,7 +61,7 @@
 
 			<div class="row">
 				<div class="col-xs-12 col-md-6 form-group">
-					<label>{{ 'Phone' | translate }}</label>
+					<label>{{ 'Phone' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('phone')}">
 						<input type="text" class="form-control" ngControl="phone">
 					</div>
@@ -77,7 +77,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-12 form-group">
-					<label>{{ 'Contact Person' | translate }}</label>
+					<label>{{ 'Contact Person' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('contactName')}">
 						<input type="text" class="form-control" ngControl="contactName"/>
 					</div>
@@ -94,7 +94,7 @@
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid url' | translate }}</small></label>
 				</div>
 				<div class="col-xs-12 col-md-6 form-group">
-					<label>{{ 'Email' | translate }}</label>
+					<label>{{ 'Email' | translate }}*</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
 						<input type="email" class="form-control" ngControl="email">
 					</div>
