--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-xs-12 col-md-6 form-group">
-            <label>{{ 'Name' | translate }}</label>
+            <label>{{ 'Name' | translate }}*</label>
             <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
                 <input type="text" class="form-control" ngControl="name">
             </div>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-12 col-md-12">
+        <div class="col-xs-12 col-md-12 form-group">
             <label class="control-label">{{ 'Icon' | translate }}</label>
             <div class="row" data-toggle="buttons">
                 <div class="col-md-2 button-items" *ngFor="#bedTemplate of bedTemplateList">
@@ -25,8 +25,8 @@
     </div>
     <hr/>
     <div class="row">
-        <div class="col-xs-12 col-md-6">
-            <label>{{ 'Capacity' | translate }}</label>
+        <div class="col-xs-12 col-md-6 form-group">
+            <label>{{ 'Capacity' | translate }}*</label>
             <div class="row">
                 <div class="col-xs-6 col-md-6">
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('maxAdults')}">
@@ -45,8 +45,8 @@
             </div>
             <label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'Each adult is replaceable with a child. Max Adults: 2 Max Children: 1 OR Max Adults: 1 Max Children: 2 OR Max Children: 3' | translate }}</small></label>
         </div>
-        <div class="col-xs-12 col-md-6">
-            <label>{{ 'Dimensions' | translate }}</label>
+        <div class="col-xs-12 col-md-6 form-group">
+            <label>{{ 'Dimensions' | translate }}*</label>
             <div class="row">
                 <div class="col-xs-6">
                     <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('width')}">
@@ -72,7 +72,7 @@
     <hr/>
 
     <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-xs-12 col-md-6 form-group">
             <label>{{ 'Notes' | translate }}</label>
             <textarea class="form-control" ngControl="notes"></textarea>
         </div>
