--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -62,7 +62,7 @@
 						<div class="row">
 							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="#pricePerChild of pricePerPersonVM.pricePerPerson.childrenPriceList">
 								<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerChild.isValid()}">
-									<span class="input-group-addon"><small>{{pricePerChild.noOfPersons}}{{getNumberSuffix(pricePerChild.noOfPersons)}}</small> <i class="fa fa-child"></i></span>
+									<span class="input-group-addon"><small>{{pricePerChild.noOfPersons}}{{getNumberSuffix(pricePerChild.noOfPersons)}}</small> <span class="unitpal-font">;</span></span>
 									<input type="number" class="form-control" [(ngModel)]="pricePerChild.price"
 									[readonly]="readonly" />
 								</div>
