--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -50,7 +50,7 @@
                                 <i class="fa unitpal-font">\</i>
                             </a>
                             <div class="bed-slot-inner" [title]="bedVM.bed.name">
-                                <span class="unitpal-font bed-btn">{{bedVM.template.iconUrl}}</span>
+                                <span class="bed-slot-icon unitpal-font">{{bedVM.template.iconUrl}}</span>
                                 <br/>
                                 <small>{{bedVM.bed.name}}</small>
                                 <br/> {{bedVM.capacity.maxAdults}}
