--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -67,13 +67,13 @@
 								</span>
 							</td>
 							<td>
-								<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)">
+								<a class="btn btn-xs" *ngIf="tableOptions.canCopy" (click)="copyItem(item)" title="{{ 'Clone' | translate }}">
 									<i class="fa unitpal-font">[</i>
 								</a>
-								<a class="btn btn-xs" *ngIf="tableOptions.canEdit" (click)="editItem(item)">
+								<a class="btn btn-xs" *ngIf="tableOptions.canEdit" (click)="editItem(item)" title="{{ 'Edit' | translate }}">
 									<i class="fa unitpal-font">]</i>
 								</a>
-								<a class="btn btn-xs" *ngIf="tableOptions.canDelete" (click)="deleteItem(item)">
+								<a class="btn btn-xs" *ngIf="tableOptions.canDelete" (click)="deleteItem(item)" title="{{ 'Delete' | translate }}">
 									<i class="fa unitpal-font">\</i>
 								</a>
 							</td>
