--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -42,6 +42,7 @@
 	<script src="/node_modules/underscore/underscore-min.js"></script>
 	<script src="/node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
 	<script src="/node_modules/pace-progress/pace.min.js"></script>
+	<script src="/node_modules/floatthead/jquery.floatThead.js"></script>
 
 	<%if (isDevelopmentEnvironment == true) {%>
 		<script>
