--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
@@ -13,5 +13,5 @@
 	</div>
 </div>
 <div class="row card-body">
-	<add-on-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></add-on-products>
+	<add-on-products class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></add-on-products>
 </div>
