--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
@@ -13,5 +13,5 @@
 	</div>
 </div>
 <div class="row card-body">
-	<add-on-products [filterBreakfastCategory]="true" (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></add-on-products>
+	<add-on-products class="col-xs-12" [filterBreakfastCategory]="true" (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></add-on-products>
 </div>
