--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
@@ -14,5 +14,5 @@
 </div>
 
 <div class="row card-body">
-	<customer-register (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></customer-register>
+	<customer-register class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></customer-register>
 </div>
