--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
@@ -10,5 +10,5 @@
 	</div>
 </div>
 <div class="row card-body">
-	<rooms (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
+	<rooms class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></rooms>
 </div>
