--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -1,4 +1,4 @@
-<div class="overview-left" [ngClass]="{'col-sm-9': !isEditing, 'col-sm-3': isEditing}">
+<div class="overview-left" [ngClass]="{'col-xs-9': !isEditing, 'col-xs-3': isEditing}">
 	<lazy-loading-table 
 		[isCollapsed]="isEditing" 
 		(onAdd)="addAddOnProduct()"
@@ -9,7 +9,7 @@
 		>
 	</lazy-loading-table>
 </div>
-<div class="col-sm-3 overview-right" *ngIf="!isEditing">
+<div class="col-xs-3 overview-right" *ngIf="!isEditing">
 	<add-on-product-overview 
 		*ngIf="selectedAddOnProductVM" 
 		[addOnProductVM]="selectedAddOnProductVM"
@@ -18,7 +18,7 @@
 	<wizard-steps-component></wizard-steps-component>
 	
 </div>
-<div class="col-sm-9 edit-container" *ngIf="isEditing">
+<div class="col-xs-9 edit-container" *ngIf="isEditing">
 	<add-on-product-edit
 		*ngIf="selectedAddOnProductVM" 
 		[filteredCategory]="filteredCategory"
