--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -1,4 +1,4 @@
-<div class="overview-left" [ngClass]="{'col-sm-9': !isEditing, 'col-sm-3': isEditing}">
+<div class="overview-left" [ngClass]="{'col-xs-9': !isEditing, 'col-xs-3': isEditing}">
 	<div>
 		<ul class="nav nav-tabs">
 			<li [ngClass]="{active : areActivePriceProducts()}" *ngIf="!isEditing || areActivePriceProducts()">
@@ -26,7 +26,7 @@
 		>
 	</lazy-loading-table>
 </div>
-<div class="col-sm-3 overview-right" *ngIf="!isEditing">
+<div class="col-xs-3 overview-right" *ngIf="!isEditing">
 	<price-product-overview 
 		*ngIf="selectedPriceProductVM" 
 		[priceProductVM]="selectedPriceProductVM"
@@ -40,7 +40,7 @@
 	<wizard-steps-component></wizard-steps-component>
 	
 </div>
-<div class="col-sm-9 edit-container edit-container" *ngIf="isEditing">
+<div class="col-xs-9 edit-container edit-container" *ngIf="isEditing">
 	<price-product-edit-container
 		*ngIf="selectedPriceProductVM" 
 		[priceProductVM]="selectedPriceProductVM"
