--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
@@ -11,5 +11,5 @@
 </div>
 
 <div class="row card-body">
-	<beds (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></beds>
+	<beds class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></beds>
 </div>
