--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
@@ -13,5 +13,5 @@
 	</div>
 </div>
 <div class="row card-body">
-	<price-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></price-products>
+	<price-products class="col-xs-12" (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></price-products>
 </div>
