--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -1,5 +1,5 @@
 <div class="overview-left" [ngClass]="{'col-xs-9': !isEditing, 'col-xs-3': isEditing}">
-	<div>
+	<div class="lazy-loading-table-filter">
 		<ul class="nav nav-tabs">
 			<li [ngClass]="{active : areActivePriceProducts()}" *ngIf="!isEditing || areActivePriceProducts()">
 				<a (click)="viewActivePriceProducts()">{{ 'Active' | translate }}</a>
@@ -11,7 +11,6 @@
 				<a (click)="viewArchivedPriceProducts()">{{ 'Archived' | translate }}</a>
 			</li>
 		</ul>
-		<br/>
 	</div>
 	<lazy-loading-table
 		[isCollapsed]="isEditing"
